# opengl-demo

./: LINcompile.sh  MACcompile.sh  README.md  WINcompile.sh
Dependencies/GLM/: LICENSE 1
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/glibc/: LICENSE
Objects/: untitled.mtl
Shaders/: fragment_core.glsl  fragment_material.glsl  fragment_menu.glsl  geometry_core.glsl  geometry_material.glsl  vertex_core.glsl  vertex_material.glsl  vertex_menu.glsl
src/: Application.cpp  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Font.cpp  Font.h  Game.cpp  Game.h  LightSource.h  Logger.cpp  Logger.h  Material.h  Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Text.h  TextBox.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
